--- a/ios_lottostat/Controller/WinLotto/WinLottoAnalysisDialog.storyboard
+++ b/ios_lottostat/Controller/WinLotto/WinLottoAnalysisDialog.storyboard
@@ -250,14 +250,14 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="width" secondItem="Mzh-a4-PzK" secondAttribute="width" id="0X4-1u-t47"/>
-                                    <constraint firstItem="P6J-df-qte" firstAttribute="bottom" secondItem="t9H-9E-1Vd" secondAttribute="bottom" id="56h-71-MMN"/>
-                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="top" secondItem="P6J-df-qte" secondAttribute="top" id="7BY-XK-j8A"/>
-                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="trailing" secondItem="P6J-df-qte" secondAttribute="trailing" id="bSw-z7-DR1"/>
-                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="leading" secondItem="P6J-df-qte" secondAttribute="leading" id="kxR-lq-QMr"/>
+                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="width" secondItem="YoW-mM-9ur" secondAttribute="width" id="0X4-1u-t47"/>
+                                    <constraint firstAttribute="bottom" secondItem="t9H-9E-1Vd" secondAttribute="bottom" id="56h-71-MMN"/>
+                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="top" secondItem="YoW-mM-9ur" secondAttribute="top" id="7BY-XK-j8A"/>
+                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="trailing" secondItem="YoW-mM-9ur" secondAttribute="trailing" id="bSw-z7-DR1"/>
+                                    <constraint firstItem="t9H-9E-1Vd" firstAttribute="leading" secondItem="YoW-mM-9ur" secondAttribute="leading" id="kxR-lq-QMr"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="P6J-df-qte"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="Mzh-a4-PzK"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="lKa-Vs-FLi"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Qxh-GC-dPB"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dlV-Oe-odX"/>
