--- a/ios_lottostat/Controller/Main/SideMenu.storyboard
+++ b/ios_lottostat/Controller/Main/SideMenu.storyboard
@@ -16,8 +16,78 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWa-j7-QfY" customClass="LTMenuButton" customModule="ios_lottostat" customModuleProvider="target">
+                                <rect key="frame" x="8" y="183" width="377" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="u1D-Po-oBt"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="로또번호 추천"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="icon" value="ic_recommend"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42g-Wh-Und" customClass="LTMenuButton" customModule="ios_lottostat" customModuleProvider="target">
+                                <rect key="frame" x="8" y="239" width="377" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="5od-ji-gZa"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="시뮬레이션"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="icon" value="ic_simulation"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wic-FO-J0A">
+                                <rect key="frame" x="146.66666666666666" y="83" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="iQC-Kx-hX0"/>
+                                    <constraint firstAttribute="height" constant="100" id="rCr-ET-xWB"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LxG-bK-OlN" customClass="LTMenuButton" customModule="ios_lottostat" customModuleProvider="target">
+                                <rect key="frame" x="8" y="295" width="377" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="e6r-gn-7UM"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="당첨번호"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="icon" value="ic_win"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pIr-6g-KoH" customClass="LTMenuButton" customModule="ios_lottostat" customModuleProvider="target">
+                                <rect key="frame" x="8" y="351" width="377" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="RoD-VA-JtL"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="나의 로또번호"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="icon" value="ic_lotto"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DWa-j7-QfY" firstAttribute="top" secondItem="wic-FO-J0A" secondAttribute="bottom" id="697-aP-mN8"/>
+                            <constraint firstItem="pIr-6g-KoH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="ARy-xQ-Ee4"/>
+                            <constraint firstItem="LxG-bK-OlN" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="BsU-az-kfy"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pIr-6g-KoH" secondAttribute="trailing" constant="8" id="CYF-Ee-1Qj"/>
+                            <constraint firstItem="42g-Wh-Und" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="OZO-jy-Vey"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LxG-bK-OlN" secondAttribute="trailing" constant="8" id="YVI-Jb-yEq"/>
+                            <constraint firstAttribute="trailing" secondItem="42g-Wh-Und" secondAttribute="trailing" constant="8" id="hyA-ws-GMs"/>
+                            <constraint firstItem="wic-FO-J0A" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="24" id="l5U-ub-2lm"/>
+                            <constraint firstItem="42g-Wh-Und" firstAttribute="top" secondItem="DWa-j7-QfY" secondAttribute="bottom" id="mCM-vp-xZA"/>
+                            <constraint firstItem="wic-FO-J0A" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oaX-Ru-Jsf"/>
+                            <constraint firstItem="pIr-6g-KoH" firstAttribute="top" secondItem="LxG-bK-OlN" secondAttribute="bottom" id="v8B-Kf-N3J"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="DWa-j7-QfY" secondAttribute="trailing" constant="8" id="w3x-QB-AkM"/>
+                            <constraint firstItem="LxG-bK-OlN" firstAttribute="top" secondItem="42g-Wh-Und" secondAttribute="bottom" id="wmA-Hm-xCc"/>
+                            <constraint firstItem="DWa-j7-QfY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="xuU-ko-N20"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -26,8 +96,15 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="ic_lotto" width="64" height="64"/>
+        <image name="ic_recommend" width="64" height="64"/>
+        <image name="ic_simulation" width="64" height="64"/>
+        <image name="ic_win" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
